--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,13 @@
 			<optional>true</optional>
 		</dependency>
 
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>jquery</artifactId>
+			<version>3.6.3</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
